--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,11 +73,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Regular
+      fonts:
+        - asset: assets/fonts/Foobar-Pro-Regular.ttf
+    - family: Bold
+      fonts:
+        - asset: assets/fonts/Foobar-Pro-Bold.ttf
+    - family: Black
+      fonts:
+        - asset: assets/fonts/Foobar-Pro-Black.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
