--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animated_text_kit: ^4.2.1
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
+  flutter_svg: ^1.1.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
