--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.3.19
   flutter_svg: ^1.1.0
   flutter_spinkit: ^5.1.0
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
