--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^1.1.0
   flutter_spinkit: ^5.1.0
   get_storage: ^2.0.3
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
