--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   get_storage: ^2.0.3
   fluttertoast: ^8.0.9
+  dropdown_button2: ^1.5.2
 
 dev_dependencies:
   flutter_test:
