--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_storage: ^2.0.3
   fluttertoast: ^8.0.9
   dropdown_button2: ^1.5.2
+  pretty_qr_code: ^2.0.2
 
 dev_dependencies:
   flutter_test:
