--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   screenshot: ^1.2.3
   image_gallery_saver: ^1.7.1
   permission_handler: ^9.2.0
+  share_plus: ^4.0.7
 
 dev_dependencies:
   flutter_test:
