delete patient data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_gallery_saver: ^1.7.1
   permission_handler: ^9.2.0
   share_plus: ^4.0.7
+  qr_code_scanner: ^1.0.0
 
 dev_dependencies:
   flutter_test:
